teckno/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coderco-task-manager-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coderco-task-manager
  template:
    metadata:
      labels:
        app: coderco-task-manager
    spec:
      containers:
        - name: coderco-task-manager
          image: tecknoacr.azurecr.io/coderco-task-manager:v1
          ports:
            - containerPort: 3000
