teckno/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebsite-service
spec:
  selector:
    app: mywebsite
  ports:
    - protocol: TCP
      port: 80           # Exposed to ingress, can remain 80
      targetPort: 3000   # Must match what the container is actually listening on
  type: ClusterIP
